<resources>

    <string name="election_commission_thailand">ELECTION COMMISSION THAILAND</string>
    <string name="count_down_to_election_day">Count Down To Election Day</string>
    <string name="_365">365</string>
    <string name="days" translatable="false">Days</string>
    <string name="hours" translatable="false">Hours</string>
    <string name="minutes" translatable="false">Minutes</string>
    <string name="seconds" translatable="false">Seconds</string>
    <string name="next" translatable="false">Next</string>
</resources>